--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,27 +1,13 @@
 *
 {
-    /* font-family: 'Courier New', Courier, monospace; */
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.test
+
+table, td, th
 {
-    font-size: smaller;
-    background-color: brown;
-}
-/* .this
-{
-    border: 4px solid black;
-    height: 50px;
-    width: 50px;
-} */
-img
-{
-    /* height: 200; */
-    width: 200px;
-    /* background-color: brown; */
-}
-table .class
-{
-    border: 2px solid black;
-    height: 500px;
-    width: 50%;
+    border: 1px solid black;
+
 }
